# generated 2003/9/21 13:35:54 CEST by thoma@Tiger.(none)
# using glademm V2.0.0b

SUBDIRS = lib src tools

EXTRA_DIST = config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  config.rpath mkinstalldirs  AUTHORS TODO README configure 


ACLOCAL_AMFLAGS = -I m4
